# mubudemo

./: .travis.yml  README.md  post.json  pyproject.toml
apitest/: api.py
tests/: test_core.py
tests/api/: httpbin.py
